# Ensmasteel-2023-2024-Code

./: .gitignore  .gitmodules  README.md  install_unix.sh  install_windows_Makefile.bat
Arduino/: README.md  main.ino
Arduino/include/: arduino_std_vector.hpp  setup.hpp  stepper_motor.hpp
Arduino/src/: arduino_std_vetcor.cpp  main.cpp  stepper_motor.cpp
Arduino_Mega/: README.md
Arduino_Mega/include/: stepper_motor.hpp
ESP32/: README.md  main.ino
ESP32/include/: setup.hpp
ESP32/src/: useless.cpp
Local/: README.md
Local/100Test/include/: vector.hpp
Local/100Test/src/: main.cpp  (+1 more)
Local/Sequence_Tester/: CMakeLists.txt  README.md  a.out
Local/Sequence_Tester/include/: action.hpp  action_functions.hpp  kinetic.hpp  sequence.hpp  vector.hpp  vector_oriented.hpp
Local/Sequence_Tester/src/: action.cpp  kinetic.cpp  sequence.cpp  sequence_tester.cpp  vector.cpp  vector_oriented.cpp
Raspberry/: README.md
Shared/: README.md
Shared/include/: communication.hpp  logger.hpp  mailbox.hpp  message.hpp  utils.hpp
Shared/src/: communication.cpp  logger.cpp  mailbox.cpp  utils.cpp
Teensy/: README.md  compile_unix.sh  main.ino  teensy_threads.cpp  teensy_threads.h
Teensy/include/: action.hpp  action_functions.hpp  asservissement.hpp  codeuse.hpp  kinetic.hpp  motor.hpp  odometry.hpp  robot.hpp  sequence.hpp  setup.hpp  utils.hpp  vectors.hpp
Teensy/src/: action.cpp  asservissement.cpp  codeuse.cpp  encoder.cpp  kinetic.cpp  main.cpp  motor.cpp  odometry.cpp  robot.cpp  sequence.cpp  sequencer.cpp  setup.cpp  teensy_threads.cpp  utils.cpp  vectors.cpp
(+19 files in other folders)
